syntax = "proto3";
option java_multiple_files = true;
package com.trace.trace.grpc;

//请求
message QueryRequest {
    //类型
    string queryType = 1;
    //请求内容
    string query = 2;
    //分页的页数
    string page = 3;
}

//竞品模块请求
message CompetRequest {
    string regis_id = 1;

}

//知识图谱请求（根据品类）
message GraphRequestByKind {
    string kind = 1;
}

//知识图谱请求（根据品牌）
message GraphRequestByBrand {
    string brand = 1;
}

//返回
message QueryResponse {
    string response = 1;
}

//返回检索结果
message TraceResponse {
    string response = 1;
    bytes responseMedia = 2;
}

//返回知识图谱信息（根据品类）
message GraphResponseByKind {
    string  response = 1;
}

//返回知识图谱信息（根据品类）
message GraphResponseByBrand {
    string  response = 1;
}

service SearchService {
    rpc searchQuery(QueryRequest) returns (QueryResponse);
    rpc searchCompet(CompetRequest) returns (QueryResponse);
    rpc searchTrace(QueryRequest) returns (TraceResponse);
    rpc searchGraphByKind(GraphRequestByKind) returns (GraphResponseByKind);
    rpc searchGraphByBrand(GraphRequestByBrand) returns (GraphResponseByBrand);
}